[package]
name = "mceliece_encryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm                    = "0.10"
rand                       = "0.8"
anyhow                     = "1.0"
clap                       = { version = "4.3.0", features = ["derive"] }
base64                     = "0.21"
pqcrypto-traits            = "0.3.5"
pqcrypto-classicmceliece   = "0.2"
getrandom                  = "0.2"
pqcrypto-dilithium = "0.5.0"










